--- a/src/components/Dropdown/SelectionComp.module.css
+++ b/src/components/Dropdown/SelectionComp.module.css
@@ -1,6 +1,6 @@
-.SelectionComp{
-    background-color: #33435A;
-    color: white;
-    padding-top: 2px;
-    padding-bottom: 40px;
+.SelectionComp {
+  background-color: #33435a;
+  color: white;
+  padding-top: 2px;
+  padding-bottom: 15px;
 }
