--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,5 +1,6 @@
 .Header {
-    background-color: #33AFB6;
-    padding: 35px 0;
-    margin: 0;
+  background-color: #33afb6;
+  padding: 35px 0;
+  margin: 0;
+  color: white;
 }
