--- a/src/components/Parent.module.css
+++ b/src/components/Parent.module.css
@@ -1,4 +1,22 @@
-.Parent {
+/* .Parent {
   width: 50%;
   margin: auto;
+} */
+
+.Done {
+  background-color: #ccc;
+  padding: 10px 30px;
+  display: inline-block;
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.Done:hover {
+  background-color: rgb(158, 156, 156);
+}
+
+.Done:active {
+  background-color: rgb(112, 111, 111);
 }
