--- a/src/containers/Parent.module.css
+++ b/src/containers/Parent.module.css
@@ -8,6 +8,7 @@
   padding: 10px 30px;
   display: inline-block;
   float: right;
+  margin-right: 50px;
   margin-top: 30px;
   cursor: pointer;
   border-radius: 10px;
